Prevent wrap

--- a/app/Main/Welcome/Categories/Categories.module.css
+++ b/app/Main/Welcome/Categories/Categories.module.css
@@ -8,6 +8,7 @@
   padding: 0.5rem 1rem;
   border-radius: 1rem;
   height: fit-content;
+  white-space: nowrap;
 }
 
 .categories > section {
